employee by last name and swagger update
